Fixed update page

--- a/src/App.css
+++ b/src/App.css
@@ -83,13 +83,16 @@ select {
 }
 
 .games {
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-content: center;
   align-items: center;
 }
 
 .game {
+  margin: 20px;
 }
 
 .detail {
