--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,13 @@ select {
 }
 
 .game {
+  display: flex;
   margin: 20px;
+  height: 300px;
+  width: 300px;
+  box-shadow: 5px 5px 9px -3px rgba(0, 0, 0, 0.98);
+  justify-content: center;
+  align-items: center;
 }
 
 .detail {
